syntax = "proto3";

package proto;

// Para leer/escribir en el log 
message LogPackage { 
    string id = 1;
    string mensaje = 2;
    string timestamp = 3; 
}

// Quiero leer/escribir el log (se lo envio a todos)
message EditRequest {
    string id = 1;
    int64 node = 2;
    string timestamp = 3; 
}


// Enviamos una propuesta al nodo (al nodo que recibe el msg)
message Propuesta {
    string id = 1;
    int64 node = 2;
    int64 nroChunks = 3;
    string timestamp = 4;
}


// 1 = apruebo  0 = rechazo
message Respuesta {
    string id = 1;
    string timestamp = 2;
    bool repuesta = 3;
}


// Chunk
message ChunkPackage {
    string id = 1;
    string nombreLibro = 2;
    int64 nroChunkTotal = 3; 
    int64 nroChunkActual = 4;
    bytes chunk = 5;
}



message Empty {}

service ProtoLogisticService {

    rpc DeliverPackage(Package) returns (Package) {}
    rpc CheckStatus(Package) returns (Package) {}

    rpc AskPackage(Truck) returns (Package) {}
    rpc FinishPackage(Package) returns (Empty) {}
}

option go_package = "github.com/BSolarV/tarea2-sd-winducloveer/proto";